--- a/report/sections/02_related_work.tex
+++ b/report/sections/02_related_work.tex
@@ -7,9 +7,9 @@
 % 	\item Manchmal bietet es sich an diesen Abschnitt erst vor den Conclusions zu bringen
 % \end{enumerate}
 
-Previous work on CoAP fuzzing is sparse and only focused on implementation fuzzing. Melo et al.~\cite{Melo2017RobustnessTO} searched for publicly available CoAP implementations on common repository services and search engines and selected a few for testing. Their testing system consisted of the boofuzz framework\footnote{\url{https://github.com/jtpereyda/boofuzz}} in order to start, stop and monitor the systems under test and several \scapy based fuzzing engines. They applied random, mutational and generational fuzzing. As expected, generational fuzzing caused way more crashes than informed random and random fuzzing.
+Previous work on CoAP fuzzing is sparse and only focused on implementation fuzzing. Melo et al.~\cite{Melo2017RobustnessTO} searched for publicly available CoAP implementations on common repository services and search engines and selected a few for testing. Their testing system consisted of the boofuzz framework\footnote{\url{https://github.com/jtpereyda/boofuzz}} in order to start, stop and monitor the systems under test and several \scapy\footnote{\url{https://scapy.net}} based fuzzing engines. They applied random, mutational and generational fuzzing. As expected, generational fuzzing caused way more crashes than informed random and random fuzzing.
 
-Chen et al.~\cite{chen2018ndss} based their work on the observation that the firmware of most commercial IoT devices is not publicly available, but often official smartphone apps are used to communicate with the device and those can be easily decompiled. Therefore, the app can be used to generate sophisticated fuzzed messages even if the protocol information is unknown. The user interface and the usage of variables in the app are analyzed and then mutated. This enables the attacker to even fuzz encrypted messages and unknown protocols because only the original inputs and variables are mutated when they are first used in the app. All the data flow and logic is executed as usual by the app itself. Chen et al. put 17 systems under test that also run different protocols than CoAP and found 8 previously unknown failures.
+Chen et al.~\cite{chen2018ndss} based their work on the observation that the firmware of most commercial IoT devices is not publicly available, but often official smartphone apps are used to communicate with the device and those can be easily decompiled. Therefore, the app can be used to generate sophisticated fuzzed messages even if the actual protocol is unknown. The user interface and the usage of variables in the app are analyzed and then mutated. This enables the attacker to even fuzz encrypted messages and unknown protocols because only the original inputs and variables are mutated when they are first used in the app. All the data flow and logic is executed as usual by the app itself. Chen et al. put 17 systems under test that also run different protocols than CoAP and found 8 previously unknown failures.
 
 Furthermore, Muench et al.~\cite{EURECOM+5417} addressed the problem of error detection while fuzzing embedded devices in general. Usually, total system crashes are used as indicators for successful fuzzing. Unfortunately, a variety of software failures don't cause immediate crashes but lead to general malfunction of the system or cause a crash way later in time. Such failures are, for example, bugs that cause unintended branching and bring the program in an invalid state or buffer overflows that cause memory corruption and potential execution of data.
 
