--- a/report/sections/03_background.tex
+++ b/report/sections/03_background.tex
@@ -10,8 +10,8 @@ This section first introduces the Constrained Application Protocol and its messa
 
 \subsection{CoAP}
 
-The CoAP protocol, defined in RFC7252, is a lightweight and RESTful protocol that can be easily mapped on HTTP~\cite{RFC7252}. Basically, four types of messages can be transferred via UDP. A request can consist of Confirmable (CON) and Non-confirmable (NON) messages. Confirmable messages are expected to be responded by an Acknowledgment (ACK) message. Furthermore, reset messages (RST) can be sent. Non-confirmable messages don't require any response but a response can be sent as a NON message. All of these message types can use the four methods GET, PUT, POST and DELETE and get back defined status codes that are very similar to their corresponding HTTP methods and codes. Furthermore, every message is identified by an ID and a token and the message can be adjusted by several options. In \Autoref{section:approach} we further describe and evaluate specific properties of the CoAP message fields.
-Additionally to the original CoAP RFC, various augmenting RFCs exist and reside in different stages of the standardization process. Most often, the block-wise transfer (RFC7959\footnote{https://tools.ietf.org/html/rfc7959}) and the observation of CoAP resources is implemented (RFC7641\footnote{https://tools.ietf.org/html/rfc7641}).
+The CoAP protocol, defined in RFC7252, is a lightweight and RESTful protocol that can be easily mapped on HTTP~\cite{RFC7252}. Basically, four types of messages can be transferred via UDP. A request can consist of Confirmable (CON) and Non-confirmable (NON) messages. Confirmable messages are expected to be responded by an Acknowledgment (ACK) message. Furthermore, Reset messages (RST) can be sent. Non-confirmable messages don't require any response but a response can be sent as a NON message. All of these message types can use the four methods GET, PUT, POST and DELETE and get back defined status codes that are very similar to their corresponding HTTP methods and codes. Furthermore, every message is identified by an ID and a token and the message can be adjusted by several options. In \Autoref{section:approach} we further describe and evaluate specific properties of the CoAP message fields.
+Additionally to the original CoAP RFC, various augmenting RFCs exist and reside in different stages of the standardization process. Most often, the block-wise transfer (RFC7959\footnote{https://tools.ietf.org/html/rfc7959}) and the observation of CoAP resources are implemented (RFC7641\footnote{https://tools.ietf.org/html/rfc7641}).
 
 \subsection{Hardware}
 
@@ -19,7 +19,7 @@ Our target system for the security evaluation is the OpenMote Rev. A1\footnote{\
 
 \subsection{Fuzzing}
 
-On the side of the attacker, we use the python packet manipulation framework \scapy\footnote{\url{https://scapy.net}} with its latest CoAP community contribution\footnote{\url{https://github.com/secdev/scapy/blob/master/scapy/contrib/coap.py}}. This contribution enables us to easily assemble CoAP messages, perform requests and log the responses.
+On the side of the attacker, we use the \python packet manipulation framework \scapy\footnote{\url{https://scapy.net}} with its latest CoAP community contribution\footnote{\url{https://github.com/secdev/scapy/blob/master/scapy/contrib/coap.py}}. This contribution enables us to easily assemble CoAP messages, perform requests and log the responses.
 
 Fuzzing techniques can be categorized with respect to the approach into random fuzzing, informed random fuzzing, mutational fuzzing and generational fuzzing and with respect to the target system into white-box, gray-box and black-box fuzzing~\cite{neystadtPenTesting}.
 Random fuzzing is the most inefficient technique with respect to the potentially found errors but relatively simple to set up and best suited for systems that are completely unknown, i.e. in a black-box fuzzing setting. If some details about the used protocol or message format are known, random fuzzing can be adapted to informed fuzzing so that specific fields such as checksums are still valid in order to avoid instant rejection of the messages.
