--- a/report/sections/01_introduction.tex
+++ b/report/sections/01_introduction.tex
@@ -17,8 +17,8 @@ CoAP is known to be possibly vulnerable with respect to protocol parsing, URI pr
 
 Finding vulnerabilities in a software systems in conjunction with a hardware system is always a hard task and many methods such as manual testing or code review can only focus on one aspect of the system. Therefore, fuzzing can help to find surprising vulnerabilities even in a black-box setting. It can be fully automated and run a security analysis with no runtime overhead while no or only little explicit expert knowledge about the system under test is needed.
 
-Our approach consists of an automatic setup phase of the IoT devices, the fuzzer and the actual fuzzing with logging of all sent and received messages and debug output from the systems under test. A CoAP message is crafted using a CoAP message template and informed random field values. Subsequently, the message is sent to an IoT border router that routes it to an IoT CoAP server. If the CoAP server responds, the response is transferred back and the request as well as the response are written to log files. Furthermore, all debug outputs of the border router and the CoAP server are also saved. In order to check if fuzzing was successful and a crash occurred, a request to the standardized CoAP route \textit{/.well-known/core}, which returns all available routes, is performed and the response is compared to the expected value. If a variation or even no response can be detected, the fuzzing has been successful. The whole fuzzing workflow is automatically repeated until interrupted by the user.
+Our approach consists of an automatic setup phase of the IoT devices and the fuzzer and the actual fuzzing phase with logging of all sent and received messages and the debug output from the systems under test. A CoAP message is crafted using a CoAP message template and informed random field values. Subsequently, the message is sent to an IoT border router that routes it to an IoT CoAP server. If the CoAP server responds, the response is transferred back and the request as well as the response are written to log files. Furthermore, all debug outputs of the border router and the CoAP server are also saved. In order to check if fuzzing was successful and a crash occurred, a request to the standardized CoAP route \textit{/.well-known/core}, which returns all available routes, is performed and the response is compared to the expected value. If a variation or even no response can be detected, the fuzzing has been successful. The whole fuzzing workflow is automatically repeated until interrupted by the user.
 
-To the best of our knowledge, there is little to no work on CoAP fuzzing on real IoT devices. Melo et al.~\cite{Melo2017RobustnessTO} targeted only CoAP implementations with no respect to the underlying hardware and Chen et al.~\cite{chen2018ndss} focused on indirect CoAP fuzzing by using the smartphone apps of specific IoT devices. Also Muench et al.~\cite{EURECOM+5417} elaborated on different approaches to evaluate fuzzing and detect corrupted behavior aside from total device failures. Our work that focuses on fuzzing of a conjoined system of embedded hardware and a CoAP implementation seems promising for finding further unknown vulnerabilities. Additionally, it is the first security analysis of the popular Contiki-NG CoAP implementation on OpenMote hardware.
+To the best of our knowledge, there is little to no work on CoAP fuzzing on real IoT devices. Melo et al.~\cite{Melo2017RobustnessTO} targeted only CoAP implementations with no respect to the underlying hardware and Chen et al.~\cite{chen2018ndss} focused on indirect fuzzing of IoT protocols by using the smartphone apps of specific IoT devices. Also Muench et al.~\cite{EURECOM+5417} elaborated on different approaches to evaluate fuzzing and detect corrupted behavior aside from total device failures. Our work that focuses on fuzzing of a conjoined system of embedded hardware and a CoAP implementation seems promising for finding further unknown vulnerabilities. Additionally, it is the first security analysis of the popular Contiki-NG CoAP implementation on OpenMote hardware.
 
 This paper first introduces previous related work in \Autoref{section:related_work} and subsequently elaborates on the background of the CoAP protocol, the used hardware and fuzzing itself in \Autoref{section:background}. Later on, our approach in \Autoref{section:approach} and the implementation in \Autoref{section:implementation} are presented and they are evaluated in \Autoref{section:evaluation}. Finally, in \Autoref{section:conclusion} we conclude our results and point out directions for further research.
