--- a/report/sections/07_conclusion_future_work.tex
+++ b/report/sections/07_conclusion_future_work.tex
@@ -8,7 +8,7 @@
 %	\item Vorschläge für zukünftige Forschungsrichtungen
 %\end{enumerate}
 
-With the goal of building a fully automated fuzzing system for the CoAP implementation of Contiki-NG, we analyzed the implementation and the CoAP protocol itself in order to employ generational fuzzing. With our setup using the Python framework \scapy and the OpenMote hardware, we performed extensive fuzzing but did not succeed in finding serious vulnerabilities in the implementation. This should not be seen as a proof of security and treated carefully since fuzzing can never exhaustively test all possible inputs. Nonetheless, it is an indicator for a sufficiently secure implementation.
+With the goal of building a fully automated fuzzing system for the CoAP implementation of Contiki-NG, we analyzed the implementation and the CoAP protocol itself in order to employ generational fuzzing. With our setup using the \python framework \scapy and the OpenMote hardware, we performed extensive fuzzing but did not succeed in finding serious vulnerabilities in the implementation. This should not be seen as a proof of security and treated carefully since fuzzing can never exhaustively test all possible inputs. Nonetheless, it is an indicator for a sufficiently secure implementation.
 
 \scapy turned out to be easily usable in order to automatically construct CoAP messages. Even though a random fuzz method is also available in \scapy, we decided to fuzz the message fields ourselves. This enables us to perform informed random and generational fuzzing. Unfortunately, \scapy does not implement further CoAP extension RFCs. Such RFCs are the observation of CoAP resources proposed in RFC7641\footnote{\url{https://tools.ietf.org/html/rfc7641}} and block-wise transfers of larger messages proposed in RFC7959\footnote{\url{https://tools.ietf.org/html/rfc7959}}. Since the system under test does implement these RFCs, this would be a starting point for further research and could be done by either extending the \scapy CoAP contribution or the fuzzer itself. The lack of block-wise transfer also leads to upper bounds with respect to the message size, because a single CoAP message should not exceed an IPv6 MTU in order to avoid fragmentation.
 
