--- a/report/sections/02_related_work.tex
+++ b/report/sections/02_related_work.tex
@@ -11,7 +11,7 @@ Previous work on CoAP fuzzing is sparse and only focused on implementation fuzzi
 
 Chen et al.~\cite{chen2018ndss} based their work on the observation that the firmware of most commercial IoT devices is not publicly available, but often official smartphone apps are used to communicate with the device and those can be easily decompiled. Therefore, the app can be used to generate sophisticated fuzzed messages even if the actual protocol is unknown. The user interface and the usage of variables in the app are analyzed and then mutated. This enables the attacker to even fuzz encrypted messages and unknown protocols because only the original inputs and variables are mutated when they are first used in the app. All the data flow and logic is executed as usual by the app itself. Chen et al. put 17 systems under test that also run different protocols than CoAP and found 8 previously unknown failures.
 
-Furthermore, Muench et al.~\cite{EURECOM+5417} addressed the problem of error detection while fuzzing embedded devices in general. Usually, total system crashes are used as indicators for successful fuzzing. Unfortunately, a variety of software failures don't cause immediate crashes but lead to general malfunction of the system or cause a crash way later in time. Such failures are, for example, bugs that cause unintended branching and bring the program in an invalid state or buffer overflows that cause memory corruption and potential execution of data.
+Furthermore, Muench et al.~\cite{EURECOM+5417} addressed the problem of error detection while fuzzing embedded devices in general. Usually, total system crashes are used as indicators for successful fuzzing. Unfortunately, a variety of software failures don't cause immediate crashes but lead to general malfunction of the system or cause a crash later on. Such failures are, for example, bugs that cause unintended branching and bring the program into an invalid state or buffer overflows that cause memory corruption and potential execution of data.
 
 These types of failures are especially hard to find on embedded devices because there are usually just a few mechanisms for memory isolation and protection in place. The authors propose several techniques in order to find these failures even on embedded devices. This includes static instrumentation of the source code or the compiled binary itself with additional memory protection mechanisms, running the software on a more sophisticated host and employ higher level security mechanisms or emulating the device either partially or fully. Hardware instrumentation via debug ports is discussed as well but it is rarely applicable on commercial products. Furthermore, they present different heuristics in order to detect memory corruptions.
 
