Add leo/pawel paper title

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -88,7 +88,7 @@
 @article{PawelLeo,
  author = {Böning, Pawel and Marschke, Leonard},
  year = {2018},
- title = {RPL Fuzzing}
+ title = {RPLFUZZ: A Tool for Assessing the Routing Security of RPL-based IoT Networks}
 }
 
 @techreport{RFC7252,
